# etl-pipelines

./: .gitignore  README.md  pyproject.toml
data/input/bronze/run_date=20241207/: part-00000-0d12feaf-b0a9-493c-b16c-62a3c0473d62.c000.snappy.parquet
data/input/silver/run_date=20241207/: part-00000-2db6974d-bd30-49fd-a3c8-64832452ee64.c000.snappy.parquet
data/output/: aggregated.json
etl_ingestion/notebooks/: bronze_ingestion.py  gold_transformations.py  silver_transformation.py
etl_ingestion/src/: initializer.py  utils.py
etl_ingestion/src/compute/: aggregations.py  data_io.py  transforms.py
tests/: conftest.py  test_utils.py
tests/compute/: conftest.py  test_aggregations.py  test_transforms.py
