[tool.poetry]
name = "etl-ingestion"
version = "0.1.0"
description = "Extract, Transform & Load Ingestion Pipelines"
authors = ["Ankita Manral <ankitam.is.on@gmail.com>"]
readme = "README.md"
packages = [{include = "etl_ingestion"}]

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.2.0"
chispa = "^0.9.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"